--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>earlyjobs-ui-craft</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="earlyjobs-ui-craft" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>EarlyJobs AI Assessment</title>
+  <meta name="description"
+    content="Assess job candidates smarter and faster with EarlyJobs AI-powered recruitment platform." />
+  <meta name="author" content="EarlyJobs" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="EarlyJobs AI Assessment" />
+  <meta property="og:description"
+    content="AI-powered candidate assessment platform by EarlyJobs for efficient hiring decisions." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://earlyjobs.ai/assets/og-image.png" />
+  <meta property="og:url" content="https://earlyjobs.ai" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@earlyjobs_ai" />
+  <meta name="twitter:title" content="EarlyJobs AI Assessment" />
+  <meta name="twitter:description"
+    content="Smarter hiring starts here – use EarlyJobs AI to assess candidates instantly." />
+  <meta name="twitter:image" content="https://earlyjobs.ai/assets/og-image.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
